<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100sp"
        android:layout_marginBottom="100sp"
        android:fontFamily="@font/bebasneueregular"
        android:shadowColor="@color/black"
        android:text="@string/stok"
        android:textColor="#F99E4C"
        android:textSize="100sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLogin"
        android:layout_centerInParent="true"
        android:hint="@string/insira_seu_email"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/baseline_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEmail"
        android:layout_centerInParent="true"
        android:layout_marginTop="10sp"
        android:hint="@string/insira_sua_senha"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/baseline_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtRecuperarSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnEntrar"
        android:layout_centerInParent="true"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="20sp"
        android:text="@string/esqueceu_sua_senha"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtSenha"
        android:layout_marginTop="50sp"
        android:padding="10sp"
        android:text="@string/entrar"
        android:textSize="20sp"
        app:cornerRadius="1dp" />

    <TextView
        android:id="@+id/txtCadastre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="20sp"
        android:text="@string/n_o_tem_senha_cadastre_se"
        android:textSize="20sp" />

</RelativeLayout>